# mconverter

./: .cache.json  .gitignore  Cargo.toml  README.md  out.json  prova.json  test.json
src/: config.json  main.rs
src/api/: deezer.rs  mod.rs  spotify.rs  utils.rs
src/models/: auth.rs  config.rs  deezer.rs  mod.rs  spotify.rs
