[package]
name = "pl-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
serde_json = "1.0.80"
open = "2.1.2"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
base64 = "0.13.0"
regex = "1"